# VSON

./: LICENSE  README.md  candle.py  pyproject.toml  setup.py  upstox.py
candle_data/: nhpc_1min.vson
market_data/: all_compressed.vson  all_default.vson  all_depth.vson
vson/: __init__.py  parser.py  utils.py
vson/cli/: __init__.py  commands.py  main.py
vson/serializers/: __init__.py  base.py  market_data.py  timeseries.py
vson/validators/: __init__.py  data_types.py  market_data.py  schema_validator.py
vson_format.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
